# rook

./: README.md  rook.cabal
src/Game/Rook/: Board.hs  Coord.hs  Game.hs  Mask.hs  Piece.hs
src/Game/Rook/Movement/: Basic.hs
test/: BoardSpec.hs  CoordSpec.hs  GameSpec.hs  MaskSpec.hs  MovementBasicSpec.hs  Spec.hs
