name:                rook
version:             0.0.0.0
synopsis:            A chess game
description:         Please see README
homepage:            https://github.com/isaacazuelos/rook#readme
license:             MIT
license-file:        LICENSE
author:              Isaac Azuelos
maintainer:          isaac@azuelos.ca
copyright:           2016 Isaac Azuelos
category:            Game
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Game.Rook.Mask
  build-depends:       base >= 4.7 && < 5
  ghc-options:         -Wall
  default-language:    Haskell2010

executable rook
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , rook
  default-language:    Haskell2010

test-suite test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , rook
                     , hspec
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/isaacazuelos/rook
